# LearnOpengl

./: CMakeLists.txt
src/01_triangle/: main.cpp
src/02_shader_class/: main.cpp
src/02_shader_class/resources/: shader.fs  shader.vs
src/03_texture/: main.cpp
src/03_texture/resources/: shader.fs  shader.vs
src/04_transformations/: main.cpp
src/04_transformations/resources/: shader.vs
src/05_coordinateSystems/: main.cpp
src/06_camera/: main.cpp
src/06_camera/resources/: shader.vs
src/utils/: shader.cpp  shader.h
